Kata 5 pendiente
Se desarrolla el ejercicio 5 pero no se completa debido a que el boxArt no retorna de manera correecta. se deja pendiente de resolver