@@ -8,6 +8,7 @@ import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Retrieve id, title, and a 150x200 box art url for every video
@@ -17,7 +18,13 @@ import java.util.Map;
 public class Kata4 {
     public static List<Map> execute() {
         List<MovieList> movieLists = DataUtil.getMovieLists();
-
-        return ImmutableList.of(ImmutableMap.of("id", 5, "title", "Bad Boys", "boxart", new BoxArt(150, 200, "url")));
+        List<Map> newList = movieLists.stream().flatMap((movies) -> movies.getVideos().stream())
+                .map(video ->
+                        Map.of("id ", video.getId(),
+                                "title ", video.getTitle(),
+                                "boxArt ", video.getBoxarts().stream()
+                                        .filter(ele -> ele.getWidth() == 150).findFirst())).collect(Collectors.toList());
+        System.out.println(newList);
+        return newList;
     }
 }
